feat: Add accordion component

--- a/lib/pines_sample_web/controllers/page_html/home.html.heex
+++ b/lib/pines_sample_web/controllers/page_html/home.html.heex
@@ -1,6 +1,9 @@
 <.flash_group flash={@flash} />
 <div class="flex justify-center p-24">
   <div class="w-1/2">
-    <PinesSampleWeb.Components.Accordion.render />
+    <div>
+      <p class="text-xl font-bold mb-4">Accordion</p>
+      <PinesSampleWeb.Components.Accordion.render accordions={@accordions} />
+    </div>
   </div>
 </div>
