--- a/lib/pines_sample_web/controllers/page_html/home.html.heex
+++ b/lib/pines_sample_web/controllers/page_html/home.html.heex
@@ -6,13 +6,13 @@
     </div>
     <div class="m-4">
       <p class="text-xl font-bold mb-4">Accordion</p>
-      <div class="flex items-center justify-center p-8 border border-nuetral-300 rounded-xl">
+      <div class="flex items-center justify-center p-8 border border-nuetral-300 rounded-md">
         <PinesSampleWeb.Components.Accordion.render accordions={@accordions} />
       </div>
     </div>
     <div class="m-4">
       <p class="text-xl font-bold mb-4">Alert</p>
-      <div class="flex flex-col items-center justify-center space-y-4 p-8 border border-nuetral-300 rounded-xl">
+      <div class="flex flex-col items-center justify-center space-y-4 p-8 border border-nuetral-300 rounded-md">
         <%= for alert <- @alerts do %>
           <PinesSampleWeb.Components.Alert.render level={alert.level} icon={Map.get(alert, :icon, "")} title={alert.title} message={alert.message} />
         <% end %>
@@ -20,7 +20,7 @@
     </div>
     <div class="m-4">
       <p class="text-xl font-bold mb-4">Badge</p>
-      <div class="flex items-center justify-center space-x-2 p-8 border border-nuetral-300 rounded-xl">
+      <div class="flex items-center justify-center space-x-2 p-8 border border-nuetral-300 rounded-md">
         <%= for badge <- @badges do %>
           <PinesSampleWeb.Components.Badge.render level={badge.level} text={badge.text} />
         <% end %>
@@ -28,8 +28,14 @@
     </div>
     <div class="m-4">
       <p class="text-xl font-bold mb-4">Banner</p>
-      <div class="h-40 relative overflow-hidden p-8 border border-nuetral-300 rounded-xl">
+      <div class="h-40 relative overflow-hidden p-8 border border-nuetral-300 rounded-md">
         <PinesSampleWeb.Components.Banner.render title="Banner" message="Hello" href="#" />
+      </div>
+    </div>
+    <div class="m-4">
+      <p class="text-xl font-bold mb-4">Breadcrumb</p>
+      <div class="relative overflow-hidden p-8 border border-nuetral-300 rounded-md">
+        <PinesSampleWeb.Components.Breadcrumb.render links={@links} />
       </div>
     </div>
   </div>
