--- a/lib/pines_sample_web/controllers/page_html/home.html.heex
+++ b/lib/pines_sample_web/controllers/page_html/home.html.heex
@@ -1,6 +1,6 @@
 <.flash_group flash={@flash} />
 <div class="flex justify-center p-4">
-  <div class="w-1/2">
+  <div class="w-[70%]">
     <div class="mb-4">
       <p class="text-3xl font-bold">Pines Components</p>
     </div>
@@ -14,7 +14,12 @@
       <p class="text-xl font-bold mb-4">Alert</p>
       <div class="flex flex-col items-center justify-center space-y-4 p-8 border border-nuetral-300 rounded-md">
         <%= for alert <- @alerts do %>
-          <PinesSampleWeb.Components.Alert.render level={alert.level} icon={Map.get(alert, :icon, "")} title={alert.title} message={alert.message} />
+          <PinesSampleWeb.Components.Alert.render
+            level={alert.level}
+            icon={Map.get(alert, :icon, "")}
+            title={alert.title}
+            message={alert.message}
+          />
         <% end %>
       </div>
     </div>
@@ -34,8 +39,19 @@
     </div>
     <div class="m-4">
       <p class="text-xl font-bold mb-4">Breadcrumb</p>
-      <div class="relative overflow-hidden p-8 border border-nuetral-300 rounded-md">
+      <div class="relative p-8 border border-nuetral-300 rounded-md">
         <PinesSampleWeb.Components.Breadcrumb.render links={@links} />
+      </div>
+    </div>
+    <div class="m-4">
+      <p class="text-xl font-bold mb-4">Button</p>
+      <div class="flex items-center justify-center space-x-4 p-8 border border-nuetral-300 rounded-md">
+        <%= for button <- @buttons do %>
+          <PinesSampleWeb.Components.Button.render
+            text={button.text}
+            bg_color={button.bg_color}
+          />
+        <% end %>
       </div>
     </div>
   </div>
